[tool.poetry]
name = "python-time-series"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
